--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -94,20 +94,18 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </div>
 
                         <apex:outputPanel layout="block" rendered="{!hasFees}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
-                            <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Event Cost</h3>
+                            <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">{!IF(ISBLANK(eventPage.Event_Fee_Submit_List_Label__c),'Event Charges', eventPage.Event_Fee_Submit_List_Label__c)}</h3>
 
-                            <table class="slds-table slds-table_cell-buffer slds-table_bordered">
-                                <thead>
-                                <tr class="slds-line-height_reset">
-                                    <th class="" scope="col">
-                                        <div class="slds-truncate" title="Item">Item</div>
-                                    </th>
-                                    <th class="" scope="col">
-                                        <div class="slds-truncate" title="Fee">Fee</div>
-                                    </th>
-                                </tr>
-                                </thead>
+                            <table class="slds-table slds-table_cell-buffer slds-table_bordered slds-table_col-bordered">
                                 <tbody>
+                                <tr class="eventOnlyCost">
+                                    <td>{!IF(ISBLANK(eventPage.Event_Fee_Label__c),'Event Cost', eventPage.Event_Fee_Label__c)}</td>
+                                    <td class="slds-text-align_right">
+                                        <apex:outputText value="${0,number,###,###,###,##0.00}">
+                                            <apex:param value="{!eventOnlyPaymentAmount}"/>
+                                        </apex:outputText>
+                                    </td>
+                                </tr>
                                 <apex:repeat value="{!eventFees}" var="fee">
                                     <apex:outputPanel rendered="{!fee.Event_Fee_Type__c != 'Event' && fee.Event_Fee_Type__c != 'Event Additional'}">
                                         <tr>
@@ -120,7 +118,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                     {!IF(!ISBLANK(fee.Event_Fee_Allocation__r.Name), ' - ' + fee.Event_Fee_Allocation__r.Name, '')}
                                                 </apex:outputPanel>
                                             </td>
-                                            <td>
+                                            <td class="slds-text-align_right">
                                                 <apex:outputText value="{0, number, Currency }">
                                                     <apex:param value="{!fee.Event_Fee__c}"/>
                                                 </apex:outputText>
@@ -128,13 +126,15 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                         </tr>
                                     </apex:outputPanel>
                                 </apex:repeat>
-                                <tr class="eventOnlyCost">
-                                    <td>General Event</td>
-                                    <td>{!eventOnlyPaymentAmountFormatted}</td>
-                                </tr>
                                 <tr class="eventTotalCost">
-                                    <td><strong>Total Cost</strong></td>
-                                    <td><strong>{!totalPaymentAmountFormatted}</strong></td>
+                                    <td class="slds-cell_action-mode"><strong>{!IF(ISBLANK(eventPage.Event_Fee_Total_Label__c),'Event Cost', eventPage.Event_Fee_Total_Label__c)}</strong></td>
+                                    <td class="slds-text-align_right slds-cell_action-mode">
+                                        <strong>
+                                            <apex:outputText value="${0,number,###,###,###,##0.00}">
+                                                <apex:param value="{!totalPaymentAmount}"/>
+                                            </apex:outputText>
+                                        </strong>
+                                    </td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -142,7 +142,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                         <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
                             <p class="slds-text-body slds-p-vertical_xx-small">
-                                <apex:commandLink action="{!submitRegistration}" onClick="fadeout();" Value="{!IF(hasPaymentGateway, 'Make Payment', 'Submit Registration')}" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                                <apex:commandLink action="{!submitRegistration}" onClick="fadeout();" Value="{!IF(hasPaymentGateway, IF(ISBLANK(eventPage.Payment_Button_Label__c),'Make Payment', eventPage.Payment_Button_Label__c), 'Submit Registration')}" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                                 <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                             </p>
                         </div>
