--- a/force-app/main/default/layouts/Summit_Events_Email__c-Summit Events Email Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Email__c-Summit Events Email Default Layout.layout-meta.xml
@@ -19,6 +19,13 @@
         <label>Information</label>
         <layoutColumns>
             <layoutItems>
+                <height>150</height>
+                <page>SummitEventsLetterheadLookup</page>
+                <showLabel>false</showLabel>
+                <showScrollbars>false</showScrollbars>
+                <width>100%</width>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>Name</field>
             </layoutItems>
@@ -123,7 +130,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h2F000000uUUt</masterLabel>
+        <masterLabel>00h23000000PKf1</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
