--- a/force-app/main/default/pages/SummitEventsLetterheadLookup.page
+++ b/force-app/main/default/pages/SummitEventsLetterheadLookup.page
@@ -12,9 +12,9 @@ Created by Thaddaeus Dahlberg on 10/11/2018.
             <div class="slds-col">
                 <div class="slds-form-element">
                     <apex:outputLabel for="orgWideEmail">Select Organization Wide Email
-                        <br/>Currently selected: {!IF(!ISBLANK(Summit_Events_Email__c.Org_Email__c), Summit_Events_Email__c.Org_Email__c, ' None')}</apex:outputLabel>
+                        <br/>Currently selected: {!IF(!ISBLANK(summitEventsEmail.Org_Email__c), summitEventsEmail.Org_Email__c, ' None')}</apex:outputLabel>
                     <div class="slds-select_container">
-                        <apex:selectList multiselect="false" size="1" value="{!Summit_Events_Email__c.Org_Email_Id__c}" required="false" id="orgWideEmail" styleClass="slds-select">
+                        <apex:selectList multiselect="false" size="1" value="{!summitEventsEmail.Org_Email_Id__c}" required="false" id="orgWideEmail" styleClass="slds-select">
                             <apex:selectOptions value="{!orgWideEmail}"/>
                         </apex:selectList>
                     </div>
@@ -23,9 +23,9 @@ Created by Thaddaeus Dahlberg on 10/11/2018.
             <div class="slds-col">
                 <div class="slds-form-element">
                     <apex:outputLabel for="letterheadLayout">Select Classic Letterhead<br/>
-                        Currently selected: {!IF(!ISBLANK(Summit_Events_Email__c.Letterhead_Id__c), Summit_Events_Email__c.Letterhead_Id__c, ' None')}</apex:outputLabel>
+                        Currently selected: {!IF(!ISBLANK(summitEventsEmail.Letterhead_Id__c), summitEventsEmail.Letterhead_Id__c, ' None')}</apex:outputLabel>
                     <div class="slds-select_container">
-                        <apex:selectList multiselect="false" size="1" value="{!Summit_Events_Email__c.Letterhead_Id__c}" required="false" id="letterheadLayout" styleClass="slds-select">
+                        <apex:selectList multiselect="false" size="1" value="{!summitEventsEmail.Letterhead_Id__c}" required="false" id="letterheadLayout" styleClass="slds-select">
                             <apex:selectOptions value="{!Letterheads}"/>
                         </apex:selectList>
                     </div>
