--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -61,7 +61,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </div>
                     </apex:outputPanel>
 
-                    <apex:outputPanel rendered="{!eventIsClosed}" layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
+                    <apex:outputPanel rendered="{!eventIsClosed}" layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small regularLists">
                         <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
                             <apex:outputText value="{!eventPage.Event_Submit_Title__c}"/>
                         </h2>
@@ -77,7 +77,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:outputText value="{!eventPage.Event_Submit_Title__c}"/>
                             </h2>
 
-                            <p class="slds-text-body slds-p-vertical_xx-small">
+                            <p class="slds-text-body slds-p-vertical_xx-small regularLists">
                                 <apex:outputText escape="false" value="{!eventPage.Event_Submit_Description__c}"/>
                             </p>
 
@@ -176,10 +176,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                             </p>
                         </div>
-                        <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                            <p class="slds-text-body ">
-                                <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"/>
-                            </p>
+                        <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small regularLists">
+                            <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"/>
                         </div>
                     </apex:outputPanel>
                 </apex:form>
