--- a/force-app/main/default/pages/SummitEventsCancelReview.page
+++ b/force-app/main/default/pages/SummitEventsCancelReview.page
@@ -44,7 +44,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
                         <apex:outputText value="{!eventRegistration.Event__r.Event_Cancel_Review_Title__c}"/>
                     </h2>
-                    <p class="slds-text-body slds-p-vertical_xx-small">
+                    <p class="slds-text-body slds-p-vertical_xx-small regularLists">
                         <apex:outputText value="{!eventRegistration.Event__r.Event_Cancel_Review_Description__c}" escape="false"/>
                     </p>
                 </div>
@@ -52,7 +52,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">
                         <apex:outputText value="{!eventRegistration.Event__r.Name}"/>
                     </h3>
-                    <p class="slds-text-body slds-p-vertical_xx-small">
+                    <p class="slds-text-body slds-p-vertical_xx-small regularLists">
                         <apex:outputText escape="false" value="{!eventRegistration.Event__r.Event_description__c}"/>
                     </p>
                     <ul class="slds-list_dotted">
@@ -91,6 +91,9 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 <h2 class="slds-text-heading_large slds-p-vertical_xx-small">Event over</h2>
                 <p class="slds-text-body slds-p-vertical_xx-small">We're sorry, the event {!evt.Event_Name__c} {!IF(!ISBLANK(evt.Event_Instance_Title__c), ' - ' + evt.Event_Instance_Title__c, '')} has already occured and your registration can not be cancelled.</p>
             </apex:outputPanel>
+            <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1 regularLists">
+                <apex:outputText escape="false" value="{!eventPage.Event_Footer__c}"/>
+            </div>
         </apex:define>
     </apex:composition>
 </apex:page>
