--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -21,7 +21,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <apex:form id="SummitEventsRegisterAppointmentsForm" styleClass="slds-grid slds-wrap">
@@ -48,14 +48,14 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </h2>
                     </div>
                     <!-- EVENT CLOSED MESSAGE -->
-                    <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1" rendered="{!eventIsClosed}">
+                    <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 regularLists" rendered="{!eventIsClosed}">
                         <p class="slds-text-body">
                             <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"/>
                         </p>
                     </apex:outputPanel>
                     <apex:outputPanel rendered="{!!eventIsClosed}" layout="none">
                         <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                            <p class="slds-text-body slds-p-vertical_xx-small">
+                            <p class="slds-text-body slds-p-vertical_xx-small regularLists">
                                 <apex:outputText escape="false" value="{!eventPage.Event_Appointment_Description__c}"/>
                             </p>
                         </div>
@@ -90,7 +90,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                         <div class="slds-accordion__content" id="accordion-details-01">
                                             <div class="slds-form-element {!IF(apt.appRequired, 'slds-is-required','')}">
                                                 <apex:outputPanel rendered="{!!ISBLANK(apt.appDesc)}" layout="none">
-                                                    <label class="slds-form-element__label slds-text-body_regular slds-p-vertical_x-small" for="input{!apt.appId}">
+                                                    <label class="slds-form-element__label slds-text-body_regular slds-p-vertical_x-small regularLists" for="input{!apt.appId}">
                                                         <apex:outputText value="{!apt.appDesc}" escape="false"/>
                                                     </label>
                                                 </apex:outputPanel>
@@ -178,7 +178,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </p>
                         </div>
 
-                        <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small regularLists">
                             <p class="slds-text-body ">
                                 <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"/>
                             </p>
