#431 Resolution - Require Event on Manually Created Reg Records
Update Registration Page Layout so Event is required if creating an internally new registration.  Created a Quick Action on instance that has a default Event and Instance so only Registrant information is needed (Name, Email, Phone).  remove "UG" from a related list label as that was UST Specific in past. Added the Quick Action to the Instance Layout.

--- a/force-app/main/default/layouts/Summit_Events_Registration__c-Summit Events Registration Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Registration__c-Summit Events Registration Default Layout.layout-meta.xml
@@ -20,7 +20,7 @@
                 <field>Lead__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Event__c</field>
             </layoutItems>
             <layoutItems>
@@ -696,7 +696,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h55000002gYmZ</masterLabel>
+        <masterLabel>00h7g000002EOVC</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
